--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,6 @@
 theme: jekyll-theme-cayman
 show_downloads: true
+
+github:
+  zip_url: http://example.com/download.zip
+  another_url: http://example.com/download.zip
