--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,3 +4,4 @@ show_downloads: true
 github:
   zip_url: https://play.google.com/store/apps/details?id=devesh.app.ocr
   tar_url: http://example.com/download.tar
+  is_project_page: false
