--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,3 +5,4 @@ github:
   zip_url: https://play.google.com/store/apps/details?id=devesh.app.ocr
   tar_url: https://github.com/DeveshRx/Text-Master-OCR/blob/master/APK/apk/release/app-release.apk?raw=true
   is_project_page: true
+  url: https://textmaster.ephrine.in
