--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,8 @@ project.ext{
     // MlkitTextRecognition_version="18.0.0"
     MlkitTextRecognition_version="16.0.0-beta4"
     gson_version="2.9.1"
-glide_version="4.13.2"
+    glide_version="4.13.2"
+    play_services_base="18.1.0"
 
     AdMobAppID=AdMob_App_ID
     AdMobAdBannerID1=AdMob_AdBannerID1
