--- a/GPlay_Billing/build.gradle
+++ b/GPlay_Billing/build.gradle
@@ -26,8 +26,12 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-  //  implementation 'androidx.appcompat:appcompat:1.4.1'
+
+    //  implementation 'androidx.appcompat:appcompat:1.4.1'
   //  implementation 'com.google.android.material:material:1.5.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
