--- a/GPlay_Billing/src/main/AndroidManifest.xml
+++ b/GPlay_Billing/src/main/AndroidManifest.xml
@@ -2,4 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="devesh.app.gplay_billing">
 
+    <application>
+        <activity
+            android:name=".GPlayBillingActivity"
+            android:exported="false" />
+    </application>
+
 </manifest>
