--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ plugins {
 }
 
 
-def AppVersionCode = 5
-def AppVersionName = "1.0.0.5"
+def AppVersionCode = 6
+def AppVersionName = "1.0.0.6"
 
 android {
     compileSdk project.CompileSDK
@@ -98,6 +98,9 @@ android {
         incremental true
     }
 
+ lint {
+                        baseline = file("lint-baseline.xml")
+                    }
 }
 
 dependencies {
@@ -189,7 +192,7 @@ dependencies {
     // Image Cropper
     // implementation 'com.theartofdev.edmodo:android-image-cropper:+'
 
-    def billing_version = "5.0.0"
+    def billing_version = "5.2.0"
     implementation "com.android.billingclient:billing:$billing_version"
     implementation "com.google.android.gms:play-services-base:$project.play_services_base"
 
