--- a/billing/build.gradle
+++ b/billing/build.gradle
@@ -3,14 +3,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk project.CompileSDK
     buildFeatures {
         viewBinding true
     }
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
+        targetSdk project.CompileSDK
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -28,6 +28,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'devesh.app.billing'
 }
 
 dependencies {
@@ -40,7 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    def billing_version = "5.0.0"
+    def billing_version = "6.0.1"
     api "com.android.billingclient:billing:$billing_version"
     api "com.google.android.gms:play-services-base:$project.play_services_base"
 
