--- a/user-guide/build.gradle
+++ b/user-guide/build.gradle
@@ -31,6 +31,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'devesh.app.user_guide'
 }
 
 dependencies {
