--- a/app/build.gradle
+++ b/app/build.gradle
@@ -197,7 +197,7 @@ dependencies {
 
   //  def billing_version = "5.2.0"
     def billing_version = "6.0.1"
-    implementation "com.android.billingclient:billing:$billing_version"
+    implementation "com.android.billingclient:billing:$project.billing_version"
     implementation "com.google.android.gms:play-services-base:$project.play_services_base"
 
     implementation 'com.google.android.ump:user-messaging-platform:2.1.0'
